--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "../image/Mingjun.png"
+  avatar           : "images/Mingjun.png"
   name             : "MJ"
   pronouns         : "He/His"  
   bio              : "简短的介绍..."
