--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Jackk996 Homepage"
 title_separator          : "-"
 name                     : &name "Jackk996"
 description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://jackk996.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -29,7 +29,7 @@ author:
   bio              : "简短的介绍..."
   location         : "China"
   employer         : "GXUFL"
-  uri              : https://jackk996.github.io/
+  uri              : https://jackk996.github.io
   email            : "none@example.org" 
 
   # Academic websites
