--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   # Biographic information
   avatar           : "Mingjun.png"
   name             : "MJ"
-  pronouns         : "He/His"  
-  bio              : "简短的介绍..."
+  pronouns         : "He/His/他"  
+  bio              : "微小的努力"
   location         : "China"
   employer         : "GXUFL"
   uri              : https://jackk996.github.io
