--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : #
+  orcid            : "https://orcid.org/0009-0007-4921-1588"
   semantic         : # URL
   ssrn             : # URL
   pubmed           : #
